# rust-permutations

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  readme.md
benches/: multiplication.rs
src/: lib.rs  permutation.rs
