[package]
name = "permutation"
description = "Small utility for manipulating permutations, allowing you to find the permutation of vector, and apply the permutation to another vector, among other thing."
repository = "https://github.com/jeremysalwen/rust-permutations"
keywords = ["permutation", "permutations", "order", "sort", "group"]
categories = ["algorithms", "data-structures"]
license = "GPL-3.0+"
readme = "readme.md"
version = "0.2.0"
authors = ["Jeremy Salwen <jeremysalwen@gmail.com>"]

[dependencies]
